# aigate

./: .cursorrules  .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  action.yml  demo.tape  pyproject.toml
.claude/: settings.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  false_positive.yml  feature_request.yml
.github/workflows/: ci.yml  claude-code-review.yml  sandbox-nightly.yml
.omc/research/: birdcage-output-shape.md
docs/: ai-tool-integration.md  architecture.md  attack-detection.md  configuration.md  github-action.md  npm-integration.md  rules.md  sandbox-phase1b-runbook.md  sandbox-phase3-runbook.md  sandbox.md
docs/assets/: demo.tape
docs/plans/: 2026-03-28-complete-missing-features.md  2026-03-28-universal-backend-and-hooks.md  2026-03-29-adaptive-detection-engine.md  2026-03-29-e2e-sandbox-testing.md  2026-03-29-universal-install-interception.md  2026-04-01-advanced-supply-chain-defenses.md  2026-04-14-content-aware-file-detection.md
scripts/: install-hooks.sh  pretool-hook.sh  publish.sh  run-e2e.sh
src/aigate/: __init__.py  agent_scanner.py  cache.py  cli.py  config.py  config_validator.py  consensus.py  content_sniff.py  detect.py  hook_installer.py  instructions.py  log.py  models.py  opensrc_cache.py  policy.py  prefilter.py  rate_limiter.py  resolver.py  skill_template.py
tests/e2e/: Dockerfile  build_packages.py  conftest.py  docker-compose.yml  test_e2e_detection.py  test_sandbox_linux_light_bypass_exfil_fixture.py
tests/fixtures/: fake_injection_attempts.py  fake_malicious_colors.py  fake_malicious_crossenv.py  (+6 more)
(+264 files in other folders)
