[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aigate"
version = "0.1.0"
description = "AI multi-model consensus engine for software supply chain security"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [{ name = "aigate contributors" }]
keywords = ["security", "supply-chain", "ai", "package-manager", "malware-detection"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Software Development :: Build Tools",
]
dependencies = [
    "click>=8.1",
    "httpx>=0.27",
    "pyyaml>=6.0",
    "rich>=13.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "ruff>=0.8",
]

[project.scripts]
aigate = "aigate.cli:main"
aigate-npm = "aigate.hooks.npm_hook:npm_wrapper"

[project.urls]
Homepage = "https://github.com/anthropics/aigate"
Repository = "https://github.com/anthropics/aigate"
Issues = "https://github.com/anthropics/aigate/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/aigate"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
